--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ before_install:
   - npm install -g ganache-cli
   - ganache-cli -a 120 -e 1000000000000 &
 install:
-  - pip install -r requirements.txt
+  #- pip install -r requirements.txt
+  - pip install web3
+  - pip install eth-utils
+  - pip install git+ssh://git@github.com:zyzek/py-solc.git@patch-1
   - python3 -m solc.install v0.4.21
 script:
   - python3 run_tests.py
