--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   #- pip install -r requirements.txt
   - pip install web3
   - pip install eth-utils
-  - pip install git+ssh://git@github.com:zyzek/py-solc.git@patch-1
+  - pip install https://github.com/zyzek/py-solc/archive/patch-1.zip
   - python3 -m solc.install v0.4.21
 script:
   - python3 run_tests.py
