Added clean command to make it easy to clean up truffle artefacts and reset the node_modules folder.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "Havven",
 	"description": "The smart contracts which make up the Havven system. (havven.io)",
 	"scripts": {
+		"clean": "rm -rf build && rm -rf node_modules && yarn",
 		"compile": "truffle compile",
 		"coverage": "solidity-coverage",
 		"build": "truffle build",
