--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"clean": "rm -rf build && rm -rf node_modules && yarn",
 		"compile": "truffle compile",
 		"coverage": "solidity-coverage",
-		"build": "truffle build",
+		"develop": "truffle develop",
 		"ganache": "ganache-cli -a 150 -e 1000000000000 -l 0x7a213a",
 		"test": "truffle compile && truffle test"
 	},
