--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,9 @@
 		"assert": true,
 		"contract": true,
 		"web3": true
+	},
+	"plugins": ["havven"],
+	"rules": {
+		"havven/no-assert-revert-without-await": "error"
 	}
 }
