--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint": "^5.5.0",
 		"eslint-config-prettier": "^3.0.1",
 		"eslint-config-standard": "^12.0.0",
+		"eslint-plugin-havven": "^1.0.0",
 		"eslint-plugin-import": "^2.14.0",
 		"eslint-plugin-node": "^7.0.1",
 		"eslint-plugin-prettier": "^2.6.2",
