--- a/.soliumrc.json
+++ b/.soliumrc.json
@@ -1,17 +1,9 @@
 {
-  "extends": "solium:all",
-  "plugins": [
-    "security"
-  ],
-  "rules": {
-    "quotes": [
-      "error",
-      "double"
-    ],
-    "indentation": [
-      "error",
-      4
-    ]
-  }
+	"extends": "solium:all",
+	"plugins": ["security"],
+	"rules": {
+		"quotes": ["error", "double"],
+		"indentation": ["error", 4],
+		"no-block-members": ["blockhash"]
+	}
 }
-
