Stop Truffle from doing network activity every time we compile by just supplying a local compiler as a node dependency.

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"ganache-cli": "^6.1.8",
 		"prettier": "^1.14.2",
 		"seedrandom": "^2.4.4",
+		"solc": "^0.4.25",
 		"solidity-coverage": "^0.5.11",
 		"solium": "^1.1.8",
 		"table": "^5.0.2",
