--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
 	"description": "The smart contracts which make up the Havven system. (havven.io)",
 	"scripts": {
 		"clean": "rm -rf build && rm -rf node_modules && yarn",
-		"compile": "truffle compile",
 		"coverage": "solidity-coverage",
-		"debug": "truffle debug",
-		"develop": "truffle develop",
-		"ganache": "ganache-cli -a 150 -e 1000000000000 -l 0x7a213a",
+		"ganache": "ganache-cli -l 0x7a213aF",
+		"ganache:proper": "ganache-cli -l 0x7a213a",
 		"lint": "eslint \"**/*.js\" && solium -d contracts/",
 		"lint:fix": "eslint --fix \"**/*.js\" && solium --fix -d contracts/",
-		"test": "concurrently -k -s first \"yarn ganache > /dev/null\" \"truffle compile && truffle test\""
+		"test": "concurrently -k -s first \"yarn ganache > /dev/null\" \"truffle compile && truffle test\"",
+		"truffle": "truffle"
 	},
 	"repository": {
 		"type": "git",
