Work in progress commit, working on optimising contract size for deploy.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"clean": "rm -rf build && rm -rf node_modules && yarn",
 		"coverage": "solidity-coverage",
-		"ganache": "ganache-cli -a 500 -e 1000000000000 -l 0x7a213aF",
+		"ganache": "ganache-cli -e 1000000000000 -l 0x7a1200",
 		"lint": "eslint \"**/*.js\" && solium -d contracts/",
 		"lint:fix": "eslint --fix \"**/*.js\" && solium --fix -d contracts/",
 		"test": "concurrently -k -s first \"yarn ganache > /dev/null\" \"wait-port 8545 && truffle test\"",
