Running an explicit truffle compile writes the result to the build folder, which means subsequent commands don't need to recompile. It also only compiles contracts that have changed. So this optimises runtime to only compile contracts that have changed instead of all of them when running tests.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"ganache": "ganache-cli -e 1000000000000 -l 0x7a1200",
 		"lint": "eslint \"**/*.js\" && solium -d contracts/",
 		"lint:fix": "eslint --fix \"**/*.js\" && solium --fix -d contracts/",
-		"test": "concurrently -k -s first \"yarn ganache > /dev/null\" \"wait-port 8545 && truffle test\"",
+		"test": "concurrently -k -s first \"yarn ganache > /dev/null\" \"truffle compile && wait-port 8545 && truffle test\"",
 		"truffle": "truffle"
 	},
 	"repository": {
