--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"eslint-plugin-promise": "^4.0.1",
 		"eslint-plugin-standard": "^4.0.0",
 		"ganache-cli": "^6.1.8",
+		"glob": "^7.1.3",
 		"prettier": "^1.14.2",
 		"seedrandom": "^2.4.4",
 		"solc": "^0.4.25",
