--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
 	},
 	"plugins": ["havven"],
 	"rules": {
-		"havven/no-assert-revert-without-await": "error"
+		"havven/no-assert-revert-without-await": "error",
+		"havven/no-assert-invalid-opcode-without-await": "error"
 	}
 }
