--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
 	"author": "Havven",
 	"description": "The smart contracts which make up the Havven system. (havven.io)",
 	"scripts": {
-		"clean": "rm -rf build && rm -rf node_modules && yarn",
+		"clean": "rm -rf build && rm -rf node_modules && npm i",
 		"coverage": "solidity-coverage",
 		"ganache": "ganache-cli -e 1000000000000 -l 0x7a1200",
 		"lint": "eslint \"**/*.js\" && solium -d contracts/",
 		"lint:fix": "eslint --fix \"**/*.js\" && solium --fix -d contracts/",
-		"test": "concurrently -k -s first \"yarn ganache > /dev/null\" \"truffle compile && wait-port 8545 && truffle test\"",
+		"test": "concurrently -k -s first \"npm run ganache > /dev/null\" \"truffle compile && wait-port 8545 && truffle test\"",
 		"truffle": "truffle"
 	},
 	"repository": {
