--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 sudo: enabled
 language: python
 python:
-  - "3.6"
+  - '3.6'
 before_install:
   - wget -qO- https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh | bash
   - source ~/.nvm/nvm.sh
   - nvm install node
   - npm install -g ganache-cli
+  - npm i
   - sudo add-apt-repository ppa:ethereum/ethereum -y
   - sudo apt-get update
   - sudo apt-get install solc
 install:
   - pip install -r requirements.txt
 script:
+  - npm run lint
+  - npm test
   - python3 run_tests.py
