--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
 		"solidity-coverage": "^0.5.11",
 		"solium": "^1.1.8",
 		"table": "^5.0.2",
-		"truffle": "^5.0.0-beta.0",
+		"truffle": "^5.0.0-beta.1",
 		"truffle-core": "^5.0.0-beta.0",
 		"truffle-external-compile": "^1.0.0-beta.0",
+		"typedarray-to-buffer": "^3.1.5",
 		"wait-port": "^0.2.2"
 	}
 }
