--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
 		"truffle-external-compile": "^1.0.0-beta.0",
 		"typedarray-to-buffer": "^3.1.5",
 		"wait-port": "^0.2.2"
+	},
+	"dependencies": {
+		"openzeppelin-solidity": "^2.0.0"
 	}
 }
