--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
 		"test": "test"
 	},
 	"devDependencies": {
+		"axios": "^0.18.0",
 		"bip39": "^2.5.0",
 		"concurrently": "^4.0.1",
+		"dotenv": "^6.1.0",
 		"eslint": "^5.5.0",
 		"eslint-config-prettier": "^3.0.1",
 		"eslint-config-standard": "^12.0.0",
@@ -47,6 +49,7 @@
 		"prettier": "^1.14.2",
 		"seedrandom": "^2.4.4",
 		"solc": "^0.4.25",
+		"solidifier": "^2.0.0",
 		"solidity-coverage": "^0.5.11",
 		"solium": "^1.1.8",
 		"table": "^5.0.2",
@@ -54,7 +57,8 @@
 		"truffle-core": "^5.0.0-beta.0",
 		"truffle-external-compile": "^1.0.0-beta.0",
 		"typedarray-to-buffer": "^3.1.5",
-		"wait-port": "^0.2.2"
+		"wait-port": "^0.2.2",
+		"web3": "^1.0.0-beta.36"
 	},
 	"dependencies": {
 		"openzeppelin-solidity": "^2.0.0"
