--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
 		"eslint-plugin-standard": "^4.0.0",
 		"ganache-cli": "^6.1.8",
 		"glob": "^7.1.3",
+		"mkdirp": "^0.5.1",
 		"prettier": "^1.14.2",
+		"rimraf": "^2.6.2",
 		"seedrandom": "^2.4.4",
 		"solc": "^0.4.25",
 		"solidifier": "^2.0.0",
