--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - nvm install node
   - npm install -g ganache-cli
   - npm i
+  - sudo apt-get install -y dpkg
   - sudo add-apt-repository ppa:ethereum/ethereum -y
   - sudo apt-get update
   - sudo apt-get install solc
